--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "cryptoforknote-util",
+    "name": "chinet-util",
     "version": "0.0.1",
-    "main": "cryptonote",
+    "main": "index.js",
     "author": {
         "name": "LucasJones, CryptoZoidberg",
         "email": "lucasjonesdev@hotmail.co.uk, crypto.zoidberg@gmail.com"
